# graphics-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  patch_notes
UnitTests/: CMakeLists.txt  WindowTest.cpp
data/shaders/: SimpleVertexShader.glsl  simple_fragment.fs  simple_vertex.vs  uniform_fragment.fs  uniform_vertex.vs
include/: linmath.h
include/glad/: glad.h
src/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
src/App/: main.cpp
src/Renderer/: CMakeLists.txt  Cube.cpp  Cube.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h  camera.cpp  camera.hpp  common.h  cube.cpp  cube.hpp  rectangle.cpp  rectangle.hpp  renderable.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
